# rust-spades

./: Cargo.toml
src/: cards.rs  game_state.rs  lib.rs  main.rs  result.rs  scoring.rs
src/tests/: mod.rs  spades_deck_unit.rs  spades_game_api_unit.rs
tests/: integration_tests.rs
