[package]
name = "spades"
version = "2.0.0"
authors = ["William <limwilliam23@gmail.com>", "targrub@gmail.com"]
repository = "https://github.com/wlim33/rust-spades"
categories = ["games", "game-engines", "simulation"]
keywords = ["spades", "cards", "state", "machine"]
readme = "./README.md"
license = "MIT"
description = "A popular four person card game implemented in Rust."

[badges]
travis-ci = { repository = "wlim33/rust-spades", branch = "master" }

[dependencies]
rand = "0.5"
serde = { version = "1.0", features = [ "derive" ], optional = false }
serde_test = { version = "1.0" }